# pp-lab

./: .gitignore  BuildAutomation.py  CMakeLists.txt  readme.md
src/: .clang-format
src/client/: ClientArgs.hpp  Main.cpp
src/server/: Main.cpp
src/shared/: ArgumentsParsing.hpp  NetHelpers.hpp  ThrowHelpers.hpp
src/shared/Sockets/: Aliases.hpp  IPv4Address.hpp  SocketDescriptor.hpp  TcpSocket.hpp  TransportSocket.hpp  UdpSocket.hpp
